--- a/zamboni-vita.org
+++ b/zamboni-vita.org
@@ -66,6 +66,103 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 =wzUV
 -----END PGP MESSAGE-----
 
+* Table of Contents                                          :TOC_3:noexport:
+- [[#introduction][Introduction]]
+- [[#skill-and-experience-overview][Skill and Experience Overview]]
+- [[#experience][Experience]]
+  - [[#swisscom][Swisscom]]
+    - [[#enterprise-security-architect][Enterprise Security Architect]]
+    - [[#squad-lead--product-owner-for-health--state-management-in-the-it-clouds-large-solution][Squad Lead & Product Owner for /Health & State Management/ in the IT Clouds Large Solution]]
+    - [[#squad-lead--product-owner-for-health--state-management-in-the-enterprise-service-cloud-project][Squad Lead & Product Owner for /Health & State Management/ in the Enterprise Service Cloud project]]
+    - [[#head-of-health-and-state-management][Head of /Health and State Management/]]
+    - [[#lemm-squad-lead-in-the-enterprise-cloud-project][LEMM Squad Lead in the Enterprise Cloud project]]
+    - [[#cloud-architect-and-orchard-project-lead][Cloud Architect and Orchard Project Lead]]
+  - [[#swisscom-cloud-lab][Swisscom Cloud Lab]]
+    - [[#senior-platform-architect][Senior Platform Architect]]
+  - [[#cfengine-as][CFEngine AS]]
+    - [[#product-manager][Product Manager]]
+    - [[#senior-security-advisor][Senior Security Advisor]]
+  - [[#hp-enterprise-services][HP Enterprise Services]]
+    - [[#account-security-officer][Account Security Officer]]
+    - [[#it-outsourcing-service-delivery-consultant][IT Outsourcing Service Delivery Consultant]]
+  - [[#ibm-zurich-research-lab][IBM Zurich Research Lab]]
+    - [[#research-staff-member][Research Staff Member]]
+  - [[#sun-microsystems][Sun Microsystems]]
+    - [[#developer-intern][Developer (Intern)]]
+  - [[#national-autonomous-university-of-mexico-unam][National Autonomous University of Mexico (UNAM)]]
+    - [[#head-of-computer-security-area][Head of Computer Security Area]]
+    - [[#system-administrator][System Administrator]]
+- [[#education][Education]]
+  - [[#phd-in-computer-science][Ph.D. in Computer Science]]
+  - [[#ms-in-computer-science][M.S. in Computer Science]]
+  - [[#bachelors-degree-in-computer-engineering][Bachelor's degree in Computer Engineering]]
+- [[#certifications][Certifications]]
+  - [[#certified-information-systems-security-professional-cissp][Certified Information Systems Security Professional (CISSP)]]
+  - [[#safereg-4-certified-product-ownerproduct-manager][SAFe\reg 4 Certified Product Owner/Product Manager]]
+- [[#research][Research]]
+  - [[#research-projects-at-ibm-selected][Research projects at IBM (selected)]]
+    - [[#project-phantom][Project Phantom]]
+    - [[#code-instrumentation-for-intrusion-detection][Code instrumentation for intrusion detection]]
+    - [[#billy-goat-active-worm-detection-and-capture][Billy Goat: Active worm detection and capture]]
+    - [[#router-based-billy-goat][Router-based Billy Goat]]
+    - [[#soc-in-a-box][SOC in a Box]]
+    - [[#exorcist][Exorcist]]
+  - [[#phd-thesis-research][Ph.D. Thesis Research]]
+    - [[#using-internal-sensors-and-embedded-detectors-for-intrusion-detection][Using internal sensors and embedded detectors for intrusion detection]]
+  - [[#additional-research-projects][Additional research projects]]
+    - [[#using-autonomous-agents-for-intrusion-detection][Using autonomous agents for intrusion detection]]
+    - [[#analysis-of-a-denial-of-service-attack-on-tcpip-synkill][Analysis of a denial-of-service attack on TCP/IP (Synkill)]]
+- [[#system-development-and-management][System Development and Management]]
+- [[#software-development-projects][Software Development Projects]]
+  - [[#publicly-available-software-projects-see-httpsgithubcomzzamboni][Publicly-available software projects: see https://github.com/zzamboni/]]
+  - [[#other-software-projects-not-publicly-available][Other software projects (not publicly available)]]
+    - [[#pilatus-ibm][Pilatus (IBM)]]
+    - [[#soc-in-a-box-ibm][SOC in a Box (IBM)]]
+    - [[#billy-goat-ibm][Billy Goat (IBM)]]
+    - [[#embedded-sensors-project-esp][Embedded Sensors Project (ESP)]]
+- [[#honors--awards][Honors & Awards]]
+  - [[#cfengine-champion][CFEngine Champion]]
+  - [[#josef-raviv-memorial-postdoctoral-fellowship][Josef Raviv Memorial Postdoctoral Fellowship]]
+  - [[#member-of-phi-beta-delta][Member of Phi Beta Delta]]
+  - [[#upe-microsoft-scholarship-award][UPE Microsoft Scholarship Award]]
+  - [[#member-of-upsilon-pi-epsilon][Member of Upsilon Pi Epsilon]]
+  - [[#fulbright-scholarship][Fulbright Scholarship]]
+- [[#other-professional-activities][Other Professional Activities]]
+  - [[#the-association-for-computing-machinery-acm][The Association for Computing Machinery (ACM)]]
+  - [[#purduepm-the-purdue-perl-users-group][Purdue.pm, the Purdue Perl Users Group]]
+  - [[#purdue-university-chapter-of-upsilon-pi-epsilon][Purdue University Chapter of Upsilon Pi Epsilon]]
+  - [[#purdue-university-chapter-of-upsilon-pi-epsilon-1][Purdue University Chapter of Upsilon Pi Epsilon]]
+- [[#program-committees-and-boards][Program Committees and Boards]]
+  - [[#editorial-board-member][Editorial Board Member]]
+  - [[#steering-committee-member][Steering Committee Member]]
+  - [[#program-chair][Program chair]]
+  - [[#program-committee-member][Program Committee Member]]
+  - [[#program-co-chair][Program co-chair]]
+  - [[#program-chair-1][Program chair]]
+  - [[#program-chair-2][Program chair]]
+  - [[#program-committee-member-1][Program Committee Member]]
+  - [[#program-committee-member-2][Program Committee Member]]
+  - [[#program-committee-member-3][Program Committee Member]]
+  - [[#organizer][Organizer]]
+- [[#teaching-and-advising][Teaching and Advising]]
+  - [[#students][Students]]
+    - [[#daniele-sgandurra-university-of-pisa-italy][Daniele Sgandurra, University of Pisa, Italy]]
+    - [[#martin-carbone-georgia-institute-of-technology-usa][Martin Carbone, Georgia Institute of Technology, U.S.A.]]
+    - [[#urko-zurutuza-ortega-mondragon-university-spain][Urko Zurutuza Ortega, Mondragon University, Spain]]
+    - [[#milton-yates-enst-bretagne-france][Milton Yates, ENST Bretagne, France]]
+    - [[#candid-wüest-eth-zurich-switzerland][Candid Wüest, ETH Zurich, Switzerland]]
+  - [[#teaching][Teaching]]
+    - [[#cfengine-one-day-training-class-8-hour-class][CFEngine one-day training class (8 hour class)]]
+    - [[#virtualization-lecture-2-hours-systems-security-class-computer-science-dept]["Virtualization" lecture (2 hours), Systems Security class, Computer Science Dept.]]
+    - [[#intrusion-detection-basic-concepts-and-current-research-at-ibm-class-3-hours-information-technology-security-spring-school]["Intrusion detection: Basic concepts and current research at IBM" class (3 hours), Information Technology Security Spring School]]
+    - [[#introduction-to-computer-security-class-40-hours]["Introduction to Computer Security" class (40 hours)]]
+    - [[#ee495-information-extraction-retrieval-and-security-course][EE495 ("Information Extraction, Retrieval and Security") course]]
+    - [[#ssh-achieving-secure-communication-over-insecure-channels-class]["SSH: Achieving secure communication over insecure channels" class]]
+    - [[#protecting-your-computing-system-class]["Protecting your computing system" class]]
+    - [[#supercomputing-internship-program-courses][Supercomputing Internship Program Courses]]
+- [[#selected-publications][Selected Publications]]
+- [[#references][References]]
+
 * Introduction
 
 #+latex: \begin{cvparagraph}
