Title fix and bib update

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -5,7 +5,8 @@
 @Book{zamboni12:learning-cfengine3,
   author       = {Diego Zamboni},
   title        = {Learning {CFEngine}},
-  publisher    = {O'Reilly Media, Inc. 2012--2017, self-published since 2017},
+  publisher    = {O'Reilly Media, Inc. 2012--2017, afterwards self-published},
+  year         = 2017,
   url          = {http://cf-learn.info/},
   isbn         = {9781449312206},
   keywords     = {book},
@@ -15,7 +16,7 @@
   author       = {Diego Zamboni},
   title        = {Learning {Hammerspoon}},
   publisher    = {Self published},
-  year         = {2018},
+  year         = 2018,
   month        = oct,
   url          = {https://leanpub.com/learning-hammerspoon},
   keywords     = {book},
