--- a/zamboni-vita.org
+++ b/zamboni-vita.org
@@ -1,18 +1,25 @@
 #+begin cv_config  AwesomeCV and LaTeX configuration section
-# CV configuration options
+
+# AwesomeCV configuration options
 #+photo: ./images/foto_diego.png
 #+photostyle: right,noedge
 #+cvcolor: awesome-orange
 #+cvfooter_left: \today
 #+cvfooter_middle: %a~~~·~~~Curriculum Vit\ae
 #+cvfooter_right: \thepage
-#+macro: cvcite \cite{$1}
-#+options: num:1
-# Uncomment this options line before exporting to ASCII, to generate readable property fields
-# #+options: prop:("FROM" "TO" "LOCATION" "EMPLOYER" "SCHOOL" "ORGANIZATION" "DATE" "POSITION" "LABEL") toc:nil
 
-# LaTeX-specific options
+# These options are useful for HTML or ASCII export, and harmless for
+# AwesomeCV, so I leave them on all the time
+#+options: num:1
+#+options: prop:("FROM" "TO" "LOCATION" "EMPLOYER" "SCHOOL" "ORGANIZATION" "DATE" "POSITION" "LABEL")
+#+options: toc:nil
+
+# LaTeX options
+
 #+latex_class_options: [12pt,a4paper]
+
+# Macro for bibliographical citations
+#+macro: cvcite \cite{$1}
 
 # Commands for including the Publications list using biblatex
 # defernumbers=true makes the "Publications" section label the entries
@@ -22,13 +29,14 @@
 #+latex_header: \addbibresource{zamboni-patents.bib}
 #+latex_header: \defbibheading{cvbibsection}[\bibname]{\cvsubsection{#1}}
 
-# Some font and separator redefinitions
+# Some font and separator redefinitions for the AwesomeCV class
 #+latex_header: \renewcommand{\acvHeaderSocialSep}{\quad\cdotp\quad}
 #+latex_header: \renewcommand{\acvHeaderIconSep}{~}
 #+latex_header: \renewcommand*{\bodyfontlight}{\sourcesanspro}
 #+latex_header: \renewcommand*{\bibfont}{\paragraphstyle}
 #+latex_header: \renewcommand*{\entrylocationstyle}[1]{{\fontsize{10pt}{1em}\bodyfontlight\slshape\color{awesome} #1}}
 #+latex_header: \renewcommand*{\subsectionstyle}{\entrytitlestyle}
+
 #+end
 
 #+title: IT Enterprise Security Architect · Computer Scientist · Team and Project Leader
@@ -41,6 +49,7 @@
 #+homepage: zzamboni.org
 
 #+begin_comment --- How to include private information in the CV ---
+
 The "Private info" section contains private information which should not be included in the CV by default. It is kept encrypted automatically thanks to the org-crypt package, whose configuration you can see here: https://github.com/zzamboni/dot-emacs/blob/master/init.org#encryption. The "crypt" tag causes it to be encrypted automatically every time the file is saved, and the "noexport" tag causes it to be omitted when the file gets exported. Its contents, when unencrypted, contains field definitions like this:
 
 ,#+mobile: <my mobile number>
@@ -50,6 +59,7 @@ The "Private info" section contains private information which should not be incl
 When encrypted, this information is simply ignored. When I want to produce a version of my CV which includes this information, I run ~M-x org-decrypt-entry~, which prompts for my GPG passphrase. Then, *without saving the file*, I run the following export command:
 
 (org-export-to-file 'awesomecv "zamboni-vita-private.tex")
+
 #+end_comment
 * Private info :noexport:crypt:
 -----BEGIN PGP MESSAGE-----
